# geomask

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: python-publish.yml  release.yml
data/: mesh.bln  shape.bln
geomask/: __init__.py  grid_types.py
scripts/: grid_types_demo.py  plots_demo.py
src/: main.py  masker.c  masker.py
tests/geomask/: test_geomask.py  test_grid_types.py  test_plotting.py
tests/src/: test_masker.py
