[tool.poetry]
name = "geo-mask"
version = "0.1.0"
description = "point clipping - contour based"
authors = ["Henrique Campiotti"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
xarray = "^2024.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ecmwf-opendata = "^0.3.3"
eccodes = "^1.7.0"
cfgrib = "^0.9.10.4"
geopandas = "^0.14.3"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
